[tool.poetry]
name = "workflow-aodp"
version = "0.0.0"
description = ""
authors = ["Ian Boyes <igboyes@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
virtool-workflow = "^5.3.0"
biopython = "^1.81"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
